--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.1.0"
+    "react-type-animation": "^3.1.0",
+    "resend": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
