--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18",
