--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "react-type-animation": "^3.1.0",
     "resend": "^1.1.0"
   },
